# stuff

./: .gitignore  compose.yml
auth-service/: .env.example  Dockerfile  compose.build.yml  compose.override.yml  compose.yml  main.py  pyproject.toml
auth-service/app/: config.py
auth-service/app/domain/: models.py
auth-service/app/handlers/: auth.py
backend/: Dockerfile  pyproject.toml
backend-framework/: Dockerfile.base  Readme.md  app.py  compose.build.yml  config.py  dependencies.py  pyproject.toml
backend-framework/auth/: dependencies.py  jwt.py  schemas.py
backend-framework/backend_framework/: __init__.py  app.py  config.py  dependencies.py  logging_config.py
backend-framework/backend_framework/auth/: __init__.py  dependencies.py  jwt.py  proxy.py  schemas.py
backend-framework/backend_framework/db/: __init__.py  mixins.py
backend-framework/db/: __init__.py  mixins.py
backend-framework/scripts/: create-secrets.ps1  down-all-local.ps1  up-all-local.ps1
backend/app/: config.py
backend/app/domain/: models.py
backend/src/: main.py
backend/src/domain/: models.py
backend/src/handlers/: users.py
stuff/: .env.example  compose.build.yml  compose.override.yml  compose.yml
stuff/backend/: .env.example  Dockerfile  pyproject.toml
stuff/backend/app/domain/: models.py
stuff/backend/src/: auth_hooks.py  config.py  main.py
stuff/backend/src/handlers/: items.py  locations.py  users.py
stuff/frontend/: index.html  package-lock.json  package.json
stuff/frontend/src/: App.jsx  api.js  auth.js  main.jsx
stuff/secrets/: .gitignore
(+14 files in other folders)
